--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0151.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0151.html
@@ -152,19 +152,19 @@
             <ins class="alt" title="nlp 1.00">καταμαθούσῃ</ins>
           </span>
         </span>
-        <span id="w_27" class="ocr_word" title="bbox 1277 450 1596 518" lang="grc">
+        <span id="w_27_0" class="ocr_word" title="bbox 1277 450 1596 518">
           <span class="alternatives">
-            <ins title="nlp 2.00">θεοσέβειαν ;</ins>
+            <ins class="alt" title="nlp 2.00">θεοσέβειαν;</ins>
+          </span>
+        </span>
+        <span id="w_27_1" class="ocr_word" title="bbox 1277 450 1596 518">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_28" class="ocr_word" title="bbox 1649 450 1680 518" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἡ</ins>
-          </span>
-        </span>
-        <span id="w_29" class="ocr_word" title="bbox 1720 473 1811 519" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
       </span>
@@ -585,9 +585,9 @@
             <ins class="alt" title="nlp 1.00">τὸν</ins>
           </span>
         </span>
-        <span id="w_111" class="ocr_word" title="bbox 1674 1148 1814 1217" lang="grc">
+        <span id="w_111_0" class="ocr_word" title="bbox 1674 1148 1814 1217">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ῥομ-</ins>
+            <ins class="alt" title="nlp 2.00">Ῥομπέρτον</ins>
           </span>
         </span>
       </span>
@@ -595,11 +595,6 @@
         <span id="w_113" class="ocr_word" title="bbox 54 1249 92 1282">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">78</ins>
-          </span>
-        </span>
-        <span id="w_114" class="ocr_word" title="bbox 116 1229 294 1297" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πέρτον</ins>
           </span>
         </span>
         <span id="w_115" class="ocr_word" title="bbox 348 1229 705 1296" lang="grc">
@@ -1331,21 +1326,26 @@
             <ins class="alt" title="nlp 1.00">προεδηλώθη</ins>
           </span>
         </span>
-        <span id="w_258" class="ocr_word" title="bbox 1679 2551 1807 2601" lang="grc">
+        <span id="w_258_0" class="ocr_word" title="bbox 1679 2551 1807 2601">
           <span class="alternatives">
-            <ins title="nlp 2.00">τιάντως</ins>
+            <ins class="alt" title="nlp 2.00">πάν-</ins>
           </span>
         </span>
-        <span id="w_259" class="ocr_word" title="bbox 1834 2563 1875 2595">
+        <span id="w_258_1" class="ocr_word" title="bbox 1679 2551 1807 2601">
           <span class="alternatives">
-            <ins title="nlp 2.00">30</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 64 2625 1806 2698">
-        <span id="w_260" class="ocr_word" title="bbox 64 2650 94 2682" lang="grc">
+        <span id="w_260_0" class="ocr_word" title="bbox 64 2650 94 2682">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
+            <ins class="alt" title="nlp 2.00">Β</ins>
+          </span>
+        </span>
+        <span id="w_260_1" class="ocr_word" title="bbox 64 2650 94 2682">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">τως</ins>
           </span>
         </span>
         <span id="w_262" class="ocr_word" title="bbox 258 2649 315 2698" lang="grc">
@@ -1358,9 +1358,14 @@
             <ins class="alt" title="nlp 1.00">εὐγενείᾳ</ins>
           </span>
         </span>
-        <span id="w_264" class="ocr_word" title="bbox 633 2643 742 2692" lang="grc">
+        <span id="w_264_0" class="ocr_word" title="bbox 633 2643 742 2692">
           <span class="alternatives">
-            <ins title="nlp 2.00">σου ,</ins>
+            <ins class="alt" title="nlp 2.00">σου,</ins>
+          </span>
+        </span>
+        <span id="w_264_1" class="ocr_word" title="bbox 633 2643 742 2692">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_265" class="ocr_word" title="bbox 791 2625 1054 2695" lang="grc">
@@ -1386,11 +1391,6 @@
         <span id="w_269" class="ocr_word" title="bbox 1661 2648 1743 2678" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_270" class="ocr_word" title="bbox 1781 2625 1806 2678" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
           </span>
         </span>
       </span>
