--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0126.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0126.html
@@ -336,9 +336,14 @@
             <ins class="alt" title="nlp 1.00">φησιν</ins>
           </span>
         </span>
-        <span id="w_62" class="ocr_word" title="bbox 894 874 999 920" lang="grc">
+        <span id="w_62_0" class="ocr_word" title="bbox 894 874 999 920">
           <span class="alternatives">
-            <ins title="nlp 2.00">,, οὐ</ins>
+            <ins class="alt" title="nlp 2.00">„οὐ</ins>
+          </span>
+        </span>
+        <span id="w_62_1" class="ocr_word" title="bbox 894 874 999 920">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_63" class="ocr_word" title="bbox 1049 852 1116 904" lang="grc">
@@ -359,11 +364,6 @@
         <span id="w_66" class="ocr_word" title="bbox 1472 869 1706 903" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοσοῦτον</ins>
-          </span>
-        </span>
-        <span id="w_67" class="ocr_word" title="bbox 1742 854 1910 919" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀγῶνα</ins>
           </span>
         </span>
       </span>
@@ -630,7 +630,7 @@
         </span>
         <span id="w_118" class="ocr_word" title="bbox 1294 1319 1399 1383" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(καὶ</ins>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_119" class="ocr_word" title="bbox 1436 1328 1543 1380" lang="grc">
@@ -751,12 +751,7 @@
         </span>
         <span id="w_141" class="ocr_word" title="bbox 494 1574 565 1614" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τις</ins>
-          </span>
-        </span>
-        <span id="w_142" class="ocr_word" title="bbox 581 1591 595 1619">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">τις,</ins>
           </span>
         </span>
         <span id="w_143" class="ocr_word" title="bbox 642 1574 709 1613" lang="grc">
@@ -1123,9 +1118,9 @@
             <ins class="alt" title="nlp 1.00">ἀλλὰ</ins>
           </span>
         </span>
-        <span id="w_214" class="ocr_word" title="bbox 1793 2102 1910 2147" lang="grc">
+        <span id="w_214_0" class="ocr_word" title="bbox 1793 2102 1910 2147">
           <span class="alternatives">
-            <ins title="nlp 2.00">πολ-</ins>
+            <ins class="alt" title="nlp 2.00">πολλαῖς</ins>
           </span>
         </span>
       </span>
@@ -1133,11 +1128,6 @@
         <span id="w_215" class="ocr_word" title="bbox 153 2196 195 2229">
           <span class="alternatives">
             <ins title="nlp 2.00">25</ins>
-          </span>
-        </span>
-        <span id="w_216" class="ocr_word" title="bbox 217 2178 324 2234" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">λαῖς</ins>
           </span>
         </span>
         <span id="w_217" class="ocr_word" title="bbox 351 2194 434 2224" lang="grc">
@@ -1457,9 +1447,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_281" class="ocr_word" title="bbox 1789 2643 1911 2706" lang="grc">
+        <span id="w_281_0" class="ocr_word" title="bbox 1789 2643 1911 2706">
           <span class="alternatives">
-            <ins title="nlp 2.00">μᾶλ-</ins>
+            <ins class="alt" title="nlp 2.00">μᾶλἐξήρχετο</ins>
           </span>
         </span>
       </span>
@@ -1467,11 +1457,6 @@
         <span id="w_282" class="ocr_word" title="bbox 334 2777 359 2815">
           <span class="alternatives">
             <ins title="nlp 2.00">5</ins>
-          </span>
-        </span>
-        <span id="w_283" class="ocr_word" title="bbox 392 2769 613 2828" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐξήρχετο</ins>
           </span>
         </span>
         <span id="w_284" class="ocr_word" title="bbox 731 2778 755 2816">
@@ -1484,9 +1469,14 @@
             <ins class="alt" title="nlp 1.00">ἀνεδυσάμην]</ins>
           </span>
         </span>
-        <span id="w_286" class="ocr_word" title="bbox 1155 2770 1468 2831" lang="grc">
+        <span id="w_286_0" class="ocr_word" title="bbox 1155 2770 1468 2831">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀνεδησάμην</ins>
+            <ins class="alt" title="nlp 2.00">ἀνεδυσάμην]</ins>
+          </span>
+        </span>
+        <span id="w_286_1" class="ocr_word" title="bbox 1155 2770 1468 2831">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_287" class="ocr_word" title="bbox 1585 2778 1636 2817">
@@ -1497,11 +1487,6 @@
         <span id="w_288" class="ocr_word" title="bbox 1668 2776 1760 2817" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
-          </span>
-        </span>
-        <span id="w_289" class="ocr_word" title="bbox 1791 2776 1913 2818" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ὅλων</ins>
           </span>
         </span>
       </span>
@@ -1541,14 +1526,9 @@
             <ins class="alt" title="nlp 1.00">αὐτοῦ</ins>
           </span>
         </span>
-        <span id="w_297" class="ocr_word" title="bbox 1528 2830 1888 2886">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Diesterwegius</ins>
-          </span>
-        </span>
         <span id="w_298" class="ocr_word" title="bbox 1900 2846 1910 2871">
           <span class="alternatives">
-            <ins title="nlp 2.00">:</ins>
+            <ins title="nlp 2.00">Diesterwegius:</ins>
           </span>
         </span>
       </span>
