--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0099.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0099.html
@@ -1222,9 +1222,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 31 2416 1775 2489">
-        <span id="w_237" class="ocr_word" title="bbox 31 2436 60 2470">
+        <span id="w_237_0" class="ocr_word" title="bbox 31 2436 60 2470">
           <span class="alternatives">
-            <ins title="nlp 2.00">6</ins>
+            <ins class="alt" title="nlp 2.00">46</ins>
+          </span>
+        </span>
+        <span id="w_237_1" class="ocr_word" title="bbox 31 2436 60 2470">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_238" class="ocr_word" title="bbox 81 2418 307 2488" lang="grc">
@@ -1282,11 +1287,6 @@
             <ins class="alt" title="nlp 1.00">ἐγγόνῃ</ins>
           </span>
         </span>
-        <span id="w_249" class="ocr_word" title="bbox 1658 2438 1775 2485" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">γαμβρὸς</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 83 2493 1775 2567">
         <span id="w_250" class="ocr_word" title="bbox 238 2508 392 2567" lang="grc">
@@ -1326,9 +1326,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 0 2572 1837 2644">
-        <span id="w_257" class="ocr_word" title="bbox 0 2586 60 2623">
+        <span id="w_257_0" class="ocr_word" title="bbox 0 2586 60 2623">
           <span class="alternatives">
-            <ins title="nlp 2.00">2</ins>
+            <ins class="alt" title="nlp 2.00">P</ins>
+          </span>
+        </span>
+        <span id="w_257_1" class="ocr_word" title="bbox 0 2586 60 2623">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">52</ins>
           </span>
         </span>
         <span id="w_258" class="ocr_word" title="bbox 83 2578 563 2644" lang="grc">
