--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0143.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0143.html
@@ -372,16 +372,11 @@
         </span>
         <span id="w_68" class="ocr_word" title="bbox 1552 775 1797 828" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συγκεχω-</ins>
+            <ins title="nlp 2.00">συγκεχωρηκὸς</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 104 836 1798 905">
-        <span id="w_69" class="ocr_word" title="bbox 104 857 250 903" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ρηκὸς</ins>
-          </span>
-        </span>
         <span id="w_70" class="ocr_word" title="bbox 290 837 373 887" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1054,16 +1049,11 @@
         </span>
         <span id="w_198" class="ocr_word" title="bbox 1606 1996 1804 2067" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀνθρω-</ins>
+            <ins title="nlp 2.00">ἀνθρωπίνης</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 104 2079 1804 2146">
-        <span id="w_199" class="ocr_word" title="bbox 104 2080 252 2146" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πίνης</ins>
-          </span>
-        </span>
         <span id="w_200" class="ocr_word" title="bbox 292 2080 507 2144" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φύσεως,</ins>
@@ -1101,16 +1091,11 @@
         </span>
         <span id="w_207" class="ocr_word" title="bbox 1680 2096 1804 2128" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παν-</ins>
+            <ins title="nlp 2.00">παντάπασι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 105 2154 1872 2225">
-        <span id="w_208" class="ocr_word" title="bbox 105 2157 290 2208" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τάπασι</ins>
-          </span>
-        </span>
         <span id="w_209" class="ocr_word" title="bbox 328 2159 663 2225" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">διεφθορυῖαν,</ins>
@@ -1195,16 +1180,11 @@
         </span>
         <span id="w_225" class="ocr_word" title="bbox 1681 2231 1805 2284" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπο-</ins>
+            <ins title="nlp 2.00">ἀποκλίνασαν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 106 2310 1805 2379">
-        <span id="w_226" class="ocr_word" title="bbox 106 2314 346 2364" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κλίνασαν</ins>
-          </span>
-        </span>
         <span id="w_227" class="ocr_word" title="bbox 400 2333 483 2363" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1321,16 +1301,11 @@
         </span>
         <span id="w_249" class="ocr_word" title="bbox 1648 2485 1805 2532" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μετει-</ins>
+            <ins title="nlp 2.00">μετειληχότα· </ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 109 2544 1871 2613">
-        <span id="w_250" class="ocr_word" title="bbox 109 2544 309 2613" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ληχότα·</ins>
-          </span>
-        </span>
         <span id="w_251" class="ocr_word" title="bbox 349 2566 433 2596" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -1376,21 +1351,26 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_260" class="ocr_word" title="bbox 1695 2563 1805 2594" lang="grc">
+        <span id="w_260_0" class="ocr_word" title="bbox 1695 2563 1805 2594">
           <span class="alternatives">
-            <ins title="nlp 2.00">καιροὺς</ins>
+            <ins class="alt" title="nlp 2.00">και-</ins>
           </span>
         </span>
-        <span id="w_261" class="ocr_word" title="bbox 1831 2558 1871 2590">
+        <span id="w_260_1" class="ocr_word" title="bbox 1695 2563 1805 2594">
           <span class="alternatives">
-            <ins title="nlp 2.00">30</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 56 2620 1810 2692">
-        <span id="w_262" class="ocr_word" title="bbox 56 2647 90 2681">
+        <span id="w_262_0" class="ocr_word" title="bbox 56 2647 90 2681">
           <span class="alternatives">
-            <ins title="nlp 2.00">D</ins>
+            <ins class="alt" title="nlp 2.00">D</ins>
+          </span>
+        </span>
+        <span id="w_262_1" class="ocr_word" title="bbox 56 2647 90 2681">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">ροὺς</ins>
           </span>
         </span>
         <span id="w_264" class="ocr_word" title="bbox 265 2622 467 2692" lang="grc">
