--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0132.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0132.html
@@ -126,9 +126,14 @@
             <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
-        <span id="w_23" class="ocr_word" title="bbox 845 473 1030 538" lang="grc">
+        <span id="w_23_0" class="ocr_word" title="bbox 845 473 1030 538">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἴριδος ,</ins>
+            <ins class="alt" title="nlp 2.00">ἴριδος,</ins>
+          </span>
+        </span>
+        <span id="w_23_1" class="ocr_word" title="bbox 845 473 1030 538">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_24" class="ocr_word" title="bbox 1069 472 1152 523" lang="grc">
@@ -144,11 +149,6 @@
         <span id="w_26" class="ocr_word" title="bbox 1387 467 1675 538" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπέλαμπον</ins>
-          </span>
-        </span>
-        <span id="w_27" class="ocr_word" title="bbox 1720 472 1900 536" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἄμαχον</ins>
           </span>
         </span>
       </span>
@@ -544,16 +544,11 @@
         </span>
         <span id="w_103" class="ocr_word" title="bbox 1789 1089 1917 1160" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρά-</ins>
+            <ins title="nlp 2.00">πράγμασιν.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 220 1170 1917 1239">
-        <span id="w_104" class="ocr_word" title="bbox 220 1186 416 1239" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γμασιν.</ins>
-          </span>
-        </span>
         <span id="w_105" class="ocr_word" title="bbox 479 1192 533 1222" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐν</ins>
@@ -626,14 +621,14 @@
             <ins class="alt" title="nlp 1.00">τις</ins>
           </span>
         </span>
-        <span id="w_119" class="ocr_word" title="bbox 1581 1248 1736 1301" lang="grc">
+        <span id="w_119_0" class="ocr_word" title="bbox 1581 1248 1736 1301">
           <span class="alternatives">
-            <ins title="nlp 2.00">αὑτοῦ,</ins>
+            <ins class="alt" title="nlp 2.00">αὐτοῦ,</ins>
           </span>
         </span>
-        <span id="w_121" class="ocr_word" title="bbox 1804 1246 1913 1299" lang="grc">
+        <span id="w_119_1" class="ocr_word" title="bbox 1581 1248 1736 1301">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀλλ’</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -727,16 +722,11 @@
         </span>
         <span id="w_139" class="ocr_word" title="bbox 1755 1405 1918 1455" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καθά-</ins>
+            <ins title="nlp 2.00">καθάπερ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 224 1480 1978 1551">
-        <span id="w_140" class="ocr_word" title="bbox 224 1501 315 1549" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">περ</ins>
-          </span>
-        </span>
         <span id="w_141" class="ocr_word" title="bbox 353 1502 424 1543" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τις</ins>
@@ -1318,16 +1308,11 @@
         </span>
         <span id="w_256" class="ocr_word" title="bbox 1766 2433 1914 2465" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">αὐτο-</ins>
+            <ins title="nlp 2.00">αὐτοκράτορος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 223 2489 1915 2558">
-        <span id="w_257" class="ocr_word" title="bbox 223 2490 461 2556" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κράτορος</ins>
-          </span>
-        </span>
         <span id="w_258" class="ocr_word" title="bbox 510 2494 776 2557" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εὐφημίαν.</ins>
