--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0128.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0128.html
@@ -415,12 +415,7 @@
         </span>
         <span id="w_77" class="ocr_word" title="bbox 1546 957 1674 999" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τινες</ins>
-          </span>
-        </span>
-        <span id="w_78" class="ocr_word" title="bbox 1689 976 1703 1003">
-          <span class="alternatives">
-            <ins title="nlp 2.00">, </ins>
+            <ins class="alt" title="nlp 2.00">τινες, </ins>
           </span>
         </span>
         <span id="w_79" class="ocr_word" title="bbox 1742 936 1809 999" lang="grc">
