--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0152.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0152.html
@@ -42,9 +42,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_6" class="ocr_word" title="bbox 1168 315 1453 359" lang="grc">
+        <span id="w_6_0" class="ocr_word" title="bbox 1168 315 1453 359">
           <span class="alternatives">
-            <ins title="nlp 2.00">κατεπάνω ,</ins>
+            <ins class="alt" title="nlp 2.00">κατεπάνω,</ins>
+          </span>
+        </span>
+        <span id="w_6_1" class="ocr_word" title="bbox 1168 315 1453 359">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1503 315 1569 355" lang="grc">
@@ -55,11 +60,6 @@
         <span id="w_8" class="ocr_word" title="bbox 1607 294 1689 344" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_9" class="ocr_word" title="bbox 1726 304 1859 360" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παρὰ</ins>
           </span>
         </span>
       </span>
@@ -408,9 +408,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_78" class="ocr_word" title="bbox 1791 936 1861 968" lang="grc">
+        <span id="w_78_0" class="ocr_word" title="bbox 1791 936 1861 968">
           <span class="alternatives">
-            <ins title="nlp 2.00">τε-</ins>
+            <ins class="alt" title="nlp 2.00">τελεσθήτω</ins>
           </span>
         </span>
       </span>
@@ -418,11 +418,6 @@
         <span id="w_79" class="ocr_word" title="bbox 124 1020 163 1053">
           <span class="alternatives">
             <ins title="nlp 2.00">10</ins>
-          </span>
-        </span>
-        <span id="w_80" class="ocr_word" title="bbox 189 1005 406 1065" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">λεσθήτω</ins>
           </span>
         </span>
         <span id="w_81" class="ocr_word" title="bbox 443 998 468 1048" lang="grc">
@@ -759,19 +754,19 @@
             <ins class="alt" title="nlp 1.00">ὡς</ins>
           </span>
         </span>
-        <span id="w_146" class="ocr_word" title="bbox 1311 1561 1377 1590" lang="grc">
+        <span id="w_146_0" class="ocr_word" title="bbox 1311 1561 1377 1590">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἄν</ins>
+            <ins class="alt" title="nlp 2.00">ἂν</ins>
+          </span>
+        </span>
+        <span id="w_146_1" class="ocr_word" title="bbox 1311 1561 1377 1590">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_147" class="ocr_word" title="bbox 1403 1534 1568 1590" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐλθὼν</ins>
-          </span>
-        </span>
-        <span id="w_148" class="ocr_word" title="bbox 1592 1537 1864 1608" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπαγγείλῃ</ins>
           </span>
         </span>
       </span>
@@ -863,9 +858,9 @@
             <ins class="alt" title="nlp 1.00">τίθεται</ins>
           </span>
         </span>
-        <span id="w_167" class="ocr_word" title="bbox 1786 1692 1862 1746" lang="grc">
+        <span id="w_167_0" class="ocr_word" title="bbox 1786 1692 1862 1746">
           <span class="alternatives">
-            <ins title="nlp 2.00">λό-</ins>
+            <ins class="alt" title="nlp 2.00">λόγου</ins>
           </span>
         </span>
       </span>
@@ -873,11 +868,6 @@
         <span id="w_168" class="ocr_word" title="bbox 125 1791 167 1824">
           <span class="alternatives">
             <ins title="nlp 2.00">20</ins>
-          </span>
-        </span>
-        <span id="w_169" class="ocr_word" title="bbox 188 1791 276 1839" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">γου</ins>
           </span>
         </span>
         <span id="w_170" class="ocr_word" title="bbox 311 1793 342 1837" lang="grc">
