--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0129.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0129.html
@@ -579,12 +579,7 @@
         </span>
         <span id="w_111" class="ocr_word" title="bbox 1199 1236 1590 1304" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑποκρινόμενος</ins>
-          </span>
-        </span>
-        <span id="w_112" class="ocr_word" title="bbox 1606 1255 1616 1266">
-          <span class="alternatives">
-            <ins title="nlp 2.00">· </ins>
+            <ins class="alt" title="nlp 2.00">ὑποκρινόμενος· </ins>
           </span>
         </span>
         <span id="w_113" class="ocr_word" title="bbox 1645 1240 1787 1297" lang="grc">
@@ -1069,19 +1064,19 @@
             <ins class="alt" title="nlp 1.00">αὐτοὺς</ins>
           </span>
         </span>
-        <span id="w_205" class="ocr_word" title="bbox 1402 2091 1510 2157" lang="grc">
+        <span id="w_205_0" class="ocr_word" title="bbox 1402 2091 1510 2157">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,νὴ</ins>
+            <ins class="alt" title="nlp 2.00">„νὴ</ins>
+          </span>
+        </span>
+        <span id="w_205_1" class="ocr_word" title="bbox 1402 2091 1510 2157">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_206" class="ocr_word" title="bbox 1539 2091 1626 2142" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸν</ins>
-          </span>
-        </span>
-        <span id="w_207" class="ocr_word" title="bbox 1654 2095 1786 2141" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Κοσμᾶν,</ins>
           </span>
         </span>
       </span>
