--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0100.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0100.html
@@ -163,11 +163,6 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 233 563 1884 634">
-        <span id="w_29" class="ocr_word" title="bbox 233 568 469 634" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">λαβόντες</ins>
-          </span>
-        </span>
         <span id="w_30" class="ocr_word" title="bbox 506 586 643 632" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μέχρι</ins>
@@ -282,9 +277,9 @@
             <ins title="nlp 2.00">ἐξέδραμον·</ins>
           </span>
         </span>
-        <span id="w_52" class="ocr_word" title="bbox 1777 739 1892 770" lang="grc">
+        <span id="w_52_0" class="ocr_word" title="bbox 1777 739 1892 770">
           <span class="alternatives">
-            <ins title="nlp 2.00">αὑτα</ins>
+            <ins class="alt" title="nlp 2.00">αὗτα</ins>
           </span>
         </span>
       </span>
@@ -695,18 +690,13 @@
             <ins class="alt" title="nlp 1.00">ἡμέρας</ins>
           </span>
         </span>
-        <span id="w_133" class="ocr_word" title="bbox 1723 1419 1926 1472" lang="grc">
+        <span id="w_133_0" class="ocr_word" title="bbox 1723 1419 1926 1472">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀπελεύ-</ins>
+            <ins class="alt" title="nlp 2.00">ἀπελεύσομαι</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 232 1495 1929 1562">
-        <span id="w_134" class="ocr_word" title="bbox 232 1512 377 1562" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σομαι</ins>
-          </span>
-        </span>
         <span id="w_135" class="ocr_word" title="bbox 414 1515 537 1561" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρὸς</ins>
