--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0145.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0145.html
@@ -43,9 +43,14 @@
             <ins class="alt" title="nlp 1.00">74</ins>
           </span>
         </span>
-        <span id="w_6" class="ocr_word" title="bbox 128 337 235 402" lang="grc">
+        <span id="w_6_0" class="ocr_word" title="bbox 128 337 235 402">
           <span class="alternatives">
-            <ins title="nlp 2.00">ῥίου</ins>
+            <ins class="alt" title="nlp 2.00">ρίου</ins>
+          </span>
+        </span>
+        <span id="w_6_1" class="ocr_word" title="bbox 128 337 235 402">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 274 355 359 387" lang="grc">
@@ -88,16 +93,11 @@
             <ins class="alt" title="nlp 1.00">εἰς</ins>
           </span>
         </span>
-        <span id="w_15" class="ocr_word" title="bbox 1661 360 1818 407" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἐγκωμίου</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 124 411 1819 482">
         <span id="w_17" class="ocr_word" title="bbox 479 433 708 481" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀγαγεῖν,</ins>
+            <ins title="nlp 2.00">λόγον ἀγαγεῖν,</ins>
           </span>
         </span>
         <span id="w_18" class="ocr_word" title="bbox 757 415 894 474" lang="grc">
