--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0130.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0130.html
@@ -217,12 +217,7 @@
         </span>
         <span id="w_39" class="ocr_word" title="bbox 511 642 684 690" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἤρχετο</ins>
-          </span>
-        </span>
-        <span id="w_40" class="ocr_word" title="bbox 698 660 710 688">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
+            <ins class="alt" title="nlp 2.00">ἤρχετο,</ins>
           </span>
         </span>
         <span id="w_41" class="ocr_word" title="bbox 751 624 801 673" lang="grc">
@@ -1153,9 +1148,14 @@
             <ins class="alt" title="nlp 1.00">εἶδες</ins>
           </span>
         </span>
-        <span id="w_220" class="ocr_word" title="bbox 408 2112 475 2141" lang="grc">
+        <span id="w_220_0" class="ocr_word" title="bbox 408 2112 475 2141">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἄν</ins>
+            <ins class="alt" title="nlp 2.00">ἂν</ins>
+          </span>
+        </span>
+        <span id="w_220_1" class="ocr_word" title="bbox 408 2112 475 2141">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_221" class="ocr_word" title="bbox 513 2091 796 2158" lang="grc">
@@ -1181,11 +1181,6 @@
         <span id="w_225" class="ocr_word" title="bbox 1703 2113 1803 2154" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῖς</ins>
-          </span>
-        </span>
-        <span id="w_226" class="ocr_word" title="bbox 1841 2095 1938 2159" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">χείλεσιν</ins>
           </span>
         </span>
       </span>
