--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0153.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0153.html
@@ -632,16 +632,21 @@
             <ins class="alt" title="nlp 1.00">κίνδυνον</ins>
           </span>
         </span>
-        <span id="w_121" class="ocr_word" title="bbox 1660 1227 1796 1280" lang="grc">
+        <span id="w_121_0" class="ocr_word" title="bbox 1660 1227 1796 1280">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀπειλοῦν</ins>
+            <ins class="alt" title="nlp 2.00">ἀπει-</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 48 1304 1795 1374">
-        <span id="w_122" class="ocr_word" title="bbox 48 1327 79 1359">
+        <span id="w_122_0" class="ocr_word" title="bbox 48 1327 79 1359">
           <span class="alternatives">
-            <ins title="nlp 2.00">Β</ins>
+            <ins class="alt" title="nlp 2.00">Β</ins>
+          </span>
+        </span>
+        <span id="w_122_1" class="ocr_word" title="bbox 48 1327 79 1359">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">λοῦν</ins>
           </span>
         </span>
         <span id="w_124" class="ocr_word" title="bbox 268 1304 548 1372" lang="grc">
@@ -822,9 +827,14 @@
             <ins class="alt" title="nlp 1.00">ἐώρα</ins>
           </span>
         </span>
-        <span id="w_161" class="ocr_word" title="bbox 506 1617 932 1683" lang="grc">
+        <span id="w_161_0" class="ocr_word" title="bbox 506 1617 932 1683">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐνδιατρίβοντας ,</ins>
+            <ins class="alt" title="nlp 2.00">ἐνδιατρίβοντας,</ins>
+          </span>
+        </span>
+        <span id="w_161_1" class="ocr_word" title="bbox 506 1617 932 1683">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_162" class="ocr_word" title="bbox 960 1637 1044 1668" lang="grc">
@@ -845,11 +855,6 @@
         <span id="w_165" class="ocr_word" title="bbox 1433 1636 1557 1676" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἑῴας</ins>
-          </span>
-        </span>
-        <span id="w_166" class="ocr_word" title="bbox 1596 1613 1795 1679" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἁπάσης</ins>
           </span>
         </span>
       </span>
@@ -916,9 +921,14 @@
             <ins class="alt" title="nlp 1.00">ὅπερ</ins>
           </span>
         </span>
-        <span id="w_179" class="ocr_word" title="bbox 770 1793 836 1822" lang="grc">
+        <span id="w_179_0" class="ocr_word" title="bbox 770 1793 836 1822">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἄν</ins>
+            <ins class="alt" title="nlp 2.00">ἂν</ins>
+          </span>
+        </span>
+        <span id="w_179_1" class="ocr_word" title="bbox 770 1793 836 1822">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_180" class="ocr_word" title="bbox 871 1771 1014 1838" lang="grc">
@@ -939,11 +949,6 @@
         <span id="w_183" class="ocr_word" title="bbox 1712 1769 1795 1820" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_184" class="ocr_word" title="bbox 1818 1786 1860 1818">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">20</ins>
           </span>
         </span>
       </span>
@@ -1099,16 +1104,21 @@
             <ins class="alt" title="nlp 1.00">πολλὴν</ins>
           </span>
         </span>
-        <span id="w_214" class="ocr_word" title="bbox 1490 2079 1795 2148" lang="grc">
+        <span id="w_214_0" class="ocr_word" title="bbox 1490 2079 1795 2148">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀφαιρουμένους</ins>
+            <ins class="alt" title="nlp 2.00">ἀφαιρουμέ-</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 56 2159 1860 2228">
-        <span id="w_215" class="ocr_word" title="bbox 56 2183 81 2216">
+        <span id="w_215_0" class="ocr_word" title="bbox 56 2183 81 2216">
           <span class="alternatives">
-            <ins title="nlp 2.00">C</ins>
+            <ins class="alt" title="nlp 2.00">C</ins>
+          </span>
+        </span>
+        <span id="w_215_1" class="ocr_word" title="bbox 56 2183 81 2216">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">νους</ins>
           </span>
         </span>
         <span id="w_217" class="ocr_word" title="bbox 258 2160 341 2211" lang="grc">
