--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0146.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0146.html
@@ -291,7 +291,7 @@
         </span>
         <span id="w_53_0" class="ocr_word" title="bbox 767 788 905 838">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">'αὐτῶν</ins>
+            <ins class="alt" title="nlp 2.00">αὐτῶν</ins>
           </span>
         </span>
         <span id="w_53_1" class="ocr_word" title="bbox 767 788 905 838">
@@ -450,19 +450,19 @@
             <ins class="alt" title="nlp 1.00">φάλαγγι</ins>
           </span>
         </span>
-        <span id="w_84" class="ocr_word" title="bbox 1523 1017 1649 1067" lang="grc">
+        <span id="w_84_0" class="ocr_word" title="bbox 1523 1017 1649 1067">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἵεται</ins>
+            <ins class="alt" title="nlp 2.00">ἴεται</ins>
+          </span>
+        </span>
+        <span id="w_84_1" class="ocr_word" title="bbox 1523 1017 1649 1067">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_85" class="ocr_word" title="bbox 1695 1037 1778 1067" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_86" class="ocr_word" title="bbox 1824 1018 1886 1082" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὴ</ins>
           </span>
         </span>
       </span>
