--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0133.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0133.html
@@ -77,7 +77,7 @@
       <span class="ocr_line" title="bbox 39 374 1783 443">
         <span id="w_12" class="ocr_word" title="bbox 39 395 72 427">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">(6</ins>
+            <ins title="nlp 2.00">16</ins>
           </span>
         </span>
         <span id="w_13" class="ocr_word" title="bbox 93 397 184 443" lang="grc">
@@ -819,9 +819,14 @@
             <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
-        <span id="w_160" class="ocr_word" title="bbox 218 1692 456 1757" lang="grc">
+        <span id="w_160_0" class="ocr_word" title="bbox 218 1692 456 1757">
           <span class="alternatives">
-            <ins title="nlp 2.00">συνθείς ,</ins>
+            <ins class="alt" title="nlp 2.00">συνθείς,</ins>
+          </span>
+        </span>
+        <span id="w_160_1" class="ocr_word" title="bbox 218 1692 456 1757">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_161" class="ocr_word" title="bbox 495 1692 726 1758" lang="grc">
@@ -852,11 +857,6 @@
         <span id="w_166" class="ocr_word" title="bbox 1502 1714 1585 1743" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_167" class="ocr_word" title="bbox 1622 1712 1781 1759" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">παραχρησάμενος.</ins>
           </span>
         </span>
       </span>
@@ -1514,9 +1514,14 @@
             <ins class="alt" title="nlp 1.00">64,</ins>
           </span>
         </span>
-        <span id="w_301" class="ocr_word" title="bbox 987 2876 1038 2916">
+        <span id="w_301_0" class="ocr_word" title="bbox 987 2876 1038 2916">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">18’</ins>
+          </span>
+        </span>
+        <span id="w_301_1" class="ocr_word" title="bbox 987 2876 1038 2916">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_303" class="ocr_word" title="bbox 1106 2884 1125 2913">
@@ -1537,11 +1542,6 @@
         <span id="w_306" class="ocr_word" title="bbox 1643 2872 1696 2911">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">32</ins>
-          </span>
-        </span>
-        <span id="w_307" class="ocr_word" title="bbox 1729 2868 1783 2910" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
       </span>
