--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0161.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0161.html
@@ -147,9 +147,9 @@
             <ins class="alt" title="nlp 1.00">τε</ins>
           </span>
         </span>
-        <span id="w_26" class="ocr_word" title="bbox 1607 473 1792 505" lang="grc">
+        <span id="w_26_0" class="ocr_word" title="bbox 1607 473 1792 505">
           <span class="alternatives">
-            <ins title="nlp 2.00">πανταχό</ins>
+            <ins class="alt" title="nlp 2.00">πανταχόθεν</ins>
           </span>
         </span>
       </span>
@@ -270,16 +270,11 @@
         </span>
         <span id="w_50" class="ocr_word" title="bbox 1629 685 1793 739" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἁπαν-</ins>
+            <ins title="nlp 2.00">ἁπανταχόθεν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 108 761 1797 834">
-        <span id="w_51" class="ocr_word" title="bbox 108 761 320 831" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταχόθεν</ins>
-          </span>
-        </span>
         <span id="w_52" class="ocr_word" title="bbox 378 766 676 833" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">συρρέοντας</ins>
@@ -485,16 +480,11 @@
         </span>
         <span id="w_92" class="ocr_word" title="bbox 1675 1080 1794 1125" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πολ-</ins>
+            <ins title="nlp 2.00">πολλὴν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 101 1152 1794 1221">
-        <span id="w_93" class="ocr_word" title="bbox 101 1153 193 1218" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λὴν</ins>
-          </span>
-        </span>
         <span id="w_94" class="ocr_word" title="bbox 238 1159 436 1205" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐκεῖθεν</ins>
@@ -522,16 +512,11 @@
         </span>
         <span id="w_99" class="ocr_word" title="bbox 1610 1171 1794 1203" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπανα-</ins>
+            <ins title="nlp 2.00">ἐπαναστρέφαι,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 103 1230 1796 1297">
-        <span id="w_100" class="ocr_word" title="bbox 103 1230 328 1297" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">στρέψαι,</ins>
-          </span>
-        </span>
         <span id="w_101" class="ocr_word" title="bbox 367 1230 435 1292" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὡς</ins>
@@ -601,16 +586,11 @@
         </span>
         <span id="w_114" class="ocr_word" title="bbox 1614 1309 1795 1375" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἱμειρό-</ins>
+            <ins title="nlp 2.00">ἱμειρόμενος</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 101 1386 1858 1453">
-        <span id="w_115" class="ocr_word" title="bbox 101 1406 246 1450" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μενος</ins>
-          </span>
-        </span>
         <span id="w_116" class="ocr_word" title="bbox 274 1407 327 1438" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸ</ins>
@@ -1182,16 +1162,11 @@
         </span>
         <span id="w_227" class="ocr_word" title="bbox 1694 2335 1792 2380" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μυ-</ins>
+            <ins title="nlp 2.00">μυρίαις</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 99 2391 1790 2460">
-        <span id="w_228" class="ocr_word" title="bbox 99 2394 226 2460" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ρίαις</ins>
-          </span>
-        </span>
         <span id="w_229" class="ocr_word" title="bbox 265 2391 473 2460" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὕβρεσιν</ins>
@@ -1224,16 +1199,11 @@
         </span>
         <span id="w_235" class="ocr_word" title="bbox 1599 2394 1790 2457" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διισχυ-</ins>
+            <ins title="nlp 2.00">διισχυριζόμενοι.</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 99 2467 1793 2537">
-        <span id="w_236" class="ocr_word" title="bbox 99 2470 351 2536" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ριζόμενοι.</ins>
-          </span>
-        </span>
         <span id="w_237" class="ocr_word" title="bbox 427 2468 451 2519" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
@@ -1286,9 +1256,14 @@
             <ins class="alt" title="nlp 1.00">ἔργου</ins>
           </span>
         </span>
-        <span id="w_247" class="ocr_word" title="bbox 662 2567 831 2613" lang="grc">
+        <span id="w_247_0" class="ocr_word" title="bbox 662 2567 831 2613">
           <span class="alternatives">
-            <ins title="nlp 2.00">έίχετο.</ins>
+            <ins class="alt" title="nlp 2.00">εἴχετο.</ins>
+          </span>
+        </span>
+        <span id="w_247_1" class="ocr_word" title="bbox 662 2567 831 2613">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_248" class="ocr_word" title="bbox 909 2567 963 2598" lang="grc">
@@ -1324,11 +1299,6 @@
         <span id="w_254" class="ocr_word" title="bbox 1651 2547 1788 2608" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐντὸς</ins>
-          </span>
-        </span>
-        <span id="w_255" class="ocr_word" title="bbox 1812 2569 1853 2602">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">30</ins>
           </span>
         </span>
       </span>
@@ -1375,16 +1345,11 @@
         </span>
         <span id="w_264" class="ocr_word" title="bbox 1569 2625 1787 2690" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκπηδή-</ins>
+            <ins title="nlp 2.00">ἐκπηδήσαντές</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 98 2701 1791 2769">
-        <span id="w_265" class="ocr_word" title="bbox 98 2702 274 2763" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σαντές</ins>
-          </span>
-        </span>
         <span id="w_266" class="ocr_word" title="bbox 303 2722 430 2763" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τινες</ins>
@@ -1420,9 +1385,9 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_273" class="ocr_word" title="bbox 1710 2721 1791 2766" lang="grc">
+        <span id="w_273_0" class="ocr_word" title="bbox 1710 2721 1791 2766">
           <span class="alternatives">
-            <ins title="nlp 2.00">με-</ins>
+            <ins class="alt" title="nlp 2.00">μεκαλύβας</ins>
           </span>
         </span>
       </span>
@@ -1430,11 +1395,6 @@
         <span id="w_274" class="ocr_word" title="bbox 213 2818 237 2857">
           <span class="alternatives">
             <ins title="nlp 2.00">9</ins>
-          </span>
-        </span>
-        <span id="w_275" class="ocr_word" title="bbox 270 2813 481 2870" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καλύβας</ins>
           </span>
         </span>
         <span id="w_276" class="ocr_word" title="bbox 520 2816 719 2858" lang="grc">
