--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0155.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0155.html
@@ -112,9 +112,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 100 436 1795 506">
-        <span id="w_19" class="ocr_word" title="bbox 100 440 387 506" lang="grc">
+        <span id="w_19_0" class="ocr_word" title="bbox 100 440 387 506">
           <span class="alternatives">
-            <ins title="nlp 2.00">πράγματα ,</ins>
+            <ins class="alt" title="nlp 2.00">πράγματα,</ins>
+          </span>
+        </span>
+        <span id="w_19_1" class="ocr_word" title="bbox 100 440 387 506">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_20" class="ocr_word" title="bbox 437 446 495 503" lang="grc">
@@ -145,11 +150,6 @@
         <span id="w_25" class="ocr_word" title="bbox 1455 438 1579 489" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κατὰ</ins>
-          </span>
-        </span>
-        <span id="w_26" class="ocr_word" title="bbox 1617 459 1795 506" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μικρὸν</ins>
           </span>
         </span>
       </span>
@@ -765,9 +765,14 @@
             <ins class="alt" title="nlp 1.00">μὴ</ins>
           </span>
         </span>
-        <span id="w_146" class="ocr_word" title="bbox 566 1523 828 1589" lang="grc">
+        <span id="w_146_0" class="ocr_word" title="bbox 566 1523 828 1589">
           <span class="alternatives">
-            <ins title="nlp 2.00">δυνάμεις ,</ins>
+            <ins class="alt" title="nlp 2.00">δυνάμεις,</ins>
+          </span>
+        </span>
+        <span id="w_146_1" class="ocr_word" title="bbox 566 1523 828 1589">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_147" class="ocr_word" title="bbox 867 1546 934 1591" lang="grc">
@@ -780,14 +785,9 @@
             <ins class="alt" title="nlp 1.00">χρήματα</ins>
           </span>
         </span>
-        <span id="w_149" class="ocr_word" title="bbox 1234 1525 1560 1591" lang="grc">
+        <span id="w_149_0" class="ocr_word" title="bbox 1234 1525 1560 1591">
           <span class="alternatives">
-            <ins title="nlp 2.00">κεκτημένον ·</ins>
-          </span>
-        </span>
-        <span id="w_150" class="ocr_word" title="bbox 1620 1524 1799 1592" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">προπέποτο</ins>
+            <ins class="alt" title="nlp 2.00">κεκτημένον·</ins>
           </span>
         </span>
       </span>
@@ -1413,9 +1413,9 @@
             <ins class="alt" title="nlp 1.00">ἐπεπόμφει</ins>
           </span>
         </span>
-        <span id="w_275" class="ocr_word" title="bbox 1649 2635 1802 2681" lang="grc">
+        <span id="w_275_0" class="ocr_word" title="bbox 1649 2635 1802 2681">
           <span class="alternatives">
-            <ins title="nlp 2.00">γραμ-</ins>
+            <ins class="alt" title="nlp 2.00">γραμσυνέβαινεν</ins>
           </span>
         </span>
       </span>
@@ -1423,11 +1423,6 @@
         <span id="w_276" class="ocr_word" title="bbox 221 2750 249 2788">
           <span class="alternatives">
             <ins title="nlp 2.00">4</ins>
-          </span>
-        </span>
-        <span id="w_277" class="ocr_word" title="bbox 281 2744 565 2800" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συνέβαινεν</ins>
           </span>
         </span>
         <span id="w_278" class="ocr_word" title="bbox 704 2751 729 2789">
