--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0147.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0147.html
@@ -980,9 +980,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 37 1988 1854 2059">
-        <span id="w_194" class="ocr_word" title="bbox 37 2009 77 2045">
+        <span id="w_194_0" class="ocr_word" title="bbox 37 2009 77 2045">
           <span class="alternatives">
-            <ins title="nlp 2.00">p.</ins>
+            <ins class="alt" title="nlp 2.00">Ρ.</ins>
+          </span>
+        </span>
+        <span id="w_194_1" class="ocr_word" title="bbox 37 2009 77 2045">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_195" class="ocr_word" title="bbox 97 2012 134 2044">
@@ -1018,11 +1023,6 @@
         <span id="w_202" class="ocr_word" title="bbox 1246 1990 1492 2058" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀλήθειαν</ins>
-          </span>
-        </span>
-        <span id="w_203" class="ocr_word" title="bbox 1531 1992 1854 2042" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐκκαλύπτειν</ins>
           </span>
         </span>
       </span>
@@ -1249,7 +1249,7 @@
         </span>
         <span id="w_246" class="ocr_word" title="bbox 629 2458 736 2524" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ </ins>
           </span>
         </span>
         <span id="w_247" class="ocr_word" title="bbox 782 2457 875 2524" lang="grc">
