--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0131.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0131.html
@@ -43,9 +43,14 @@
             <ins class="alt" title="nlp 2.00">καίσαρος,</ins>
           </span>
         </span>
-        <span id="w_5_1" class="ocr_word" title="bbox 216 309 448 374">
+        <span id="w_5_1_0" class="ocr_word" title="bbox 216 309 448 374">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00"/>
+            <ins class="alt" title="nlp 2.00">τὸ</ins>
+          </span>
+        </span>
+        <span id="w_5_1_1" class="ocr_word" title="bbox 216 309 448 374">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">γένος</ins>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 518 328 568 358" lang="grc">
