--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0156.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0156.html
@@ -54,9 +54,14 @@
             <ins class="alt" title="nlp 1.00">αὐτοῦ</ins>
           </span>
         </span>
-        <span id="w_8" class="ocr_word" title="bbox 1128 303 1441 365" lang="grc">
+        <span id="w_8_0" class="ocr_word" title="bbox 1128 303 1441 365">
           <span class="alternatives">
-            <ins title="nlp 2.00">αἰτούμενος ,</ins>
+            <ins class="alt" title="nlp 2.00">αἰτούμενος,</ins>
+          </span>
+        </span>
+        <span id="w_8_1" class="ocr_word" title="bbox 1128 303 1441 365">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_9" class="ocr_word" title="bbox 1479 318 1576 347" lang="grc">
@@ -67,11 +72,6 @@
         <span id="w_10" class="ocr_word" title="bbox 1611 294 1635 346" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
-          </span>
-        </span>
-        <span id="w_11" class="ocr_word" title="bbox 1662 300 1912 363" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βὰς</ins>
           </span>
         </span>
       </span>
@@ -650,9 +650,9 @@
             <ins class="alt" title="nlp 1.00">δρόμωνας</ins>
           </span>
         </span>
-        <span id="w_124" class="ocr_word" title="bbox 1819 1304 1916 1356" lang="grc">
+        <span id="w_124_0" class="ocr_word" title="bbox 1819 1304 1916 1356">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἵπ-</ins>
+            <ins class="alt" title="nlp 2.00">ἵππους</ins>
           </span>
         </span>
       </span>
@@ -660,11 +660,6 @@
         <span id="w_125" class="ocr_word" title="bbox 158 1412 197 1445">
           <span class="alternatives">
             <ins title="nlp 2.00">15</ins>
-          </span>
-        </span>
-        <span id="w_126" class="ocr_word" title="bbox 219 1410 342 1452" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ποὺς</ins>
           </span>
         </span>
         <span id="w_127" class="ocr_word" title="bbox 392 1410 440 1440" lang="grc">
@@ -1142,9 +1137,14 @@
             <ins class="alt" title="nlp 1.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_220" class="ocr_word" title="bbox 943 2169 1192 2217" lang="grc">
+        <span id="w_220_0" class="ocr_word" title="bbox 943 2169 1192 2217">
           <span class="alternatives">
-            <ins title="nlp 2.00">ναυτιῶν</ins>
+            <ins class="alt" title="nlp 2.00">ναυτικῶν</ins>
+          </span>
+        </span>
+        <span id="w_220_1" class="ocr_word" title="bbox 943 2169 1192 2217">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_221" class="ocr_word" title="bbox 1246 2168 1503 2233" lang="grc">
@@ -1155,11 +1155,6 @@
         <span id="w_222" class="ocr_word" title="bbox 1562 2185 1630 2226" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">εἰς</ins>
-          </span>
-        </span>
-        <span id="w_223" class="ocr_word" title="bbox 1688 2162 1920 2229" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πολέμου</ins>
           </span>
         </span>
       </span>
@@ -1263,9 +1258,14 @@
             <ins class="alt" title="nlp 1.00">τὴν</ins>
           </span>
         </span>
-        <span id="w_243" class="ocr_word" title="bbox 459 2391 603 2459" lang="grc">
+        <span id="w_243_0" class="ocr_word" title="bbox 459 2391 603 2459">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἠΪόνα</ins>
+            <ins class="alt" title="nlp 2.00">ἠϊόνα</ins>
+          </span>
+        </span>
+        <span id="w_243_1" class="ocr_word" title="bbox 459 2391 603 2459">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_244" class="ocr_word" title="bbox 637 2395 933 2461" lang="grc">
@@ -1286,11 +1286,6 @@
         <span id="w_247" class="ocr_word" title="bbox 1352 2405 1658 2466" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Βοθρεντοῦ.</ins>
-          </span>
-        </span>
-        <span id="w_248" class="ocr_word" title="bbox 1703 2393 1920 2472" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κἀκεῖσε</ins>
           </span>
         </span>
       </span>
@@ -1545,19 +1540,19 @@
             <ins class="alt" title="nlp 1.00">αὐτοῦ</ins>
           </span>
         </span>
-        <span id="w_298" class="ocr_word" title="bbox 746 2874 1046 2926" lang="grc">
+        <span id="w_298_0" class="ocr_word" title="bbox 746 2874 1046 2926">
           <span class="alternatives">
-            <ins title="nlp 2.00">ΒαΪμούντου</ins>
+            <ins class="alt" title="nlp 2.00">Βαϊμούντου</ins>
+          </span>
+        </span>
+        <span id="w_298_1" class="ocr_word" title="bbox 746 2874 1046 2926">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_299" class="ocr_word" title="bbox 1079 2889 1162 2917" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">του</ins>
-          </span>
-        </span>
-        <span id="w_300" class="ocr_word" title="bbox 1194 2873 1571 2931" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προφθάσαντος</ins>
           </span>
         </span>
       </span>
