--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0149.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0149.html
@@ -1083,19 +1083,19 @@
             <ins class="alt" title="nlp 1.00">ἐξαπέστειλε</ins>
           </span>
         </span>
-        <span id="w_211" class="ocr_word" title="bbox 1379 2262 1539 2327" lang="grc">
+        <span id="w_211_0" class="ocr_word" title="bbox 1379 2262 1539 2327">
           <span class="alternatives">
-            <ins title="nlp 2.00">(πόλις</ins>
+            <ins class="alt" title="nlp 2.00">(πόλις</ins>
+          </span>
+        </span>
+        <span id="w_211_1" class="ocr_word" title="bbox 1379 2262 1539 2327">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_212" class="ocr_word" title="bbox 1578 2263 1633 2312" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
-          </span>
-        </span>
-        <span id="w_213" class="ocr_word" title="bbox 1671 2270 1815 2312" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦτο</ins>
           </span>
         </span>
       </span>
