--- a/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0134.html
+++ b/2013-02-01-22-05_alexiasemper00comnuoft_Kaibel_Round_4.book/p0134.html
@@ -62,9 +62,9 @@
             <ins class="alt" title="nlp 1.00">διῳκονόμητο</ins>
           </span>
         </span>
-        <span id="w_10" class="ocr_word" title="bbox 1710 309 1892 370" lang="grc">
+        <span id="w_10_0" class="ocr_word" title="bbox 1710 309 1892 370">
           <span class="alternatives">
-            <ins title="nlp 2.00">ζενίζων</ins>
+            <ins class="alt" title="nlp 2.00">ξενίζων</ins>
           </span>
         </span>
       </span>
@@ -173,9 +173,14 @@
             <ins class="alt" title="nlp 1.00">πατριάρχης</ins>
           </span>
         </span>
-        <span id="w_31" class="ocr_word" title="bbox 668 545 899 604" lang="grc">
+        <span id="w_31_0" class="ocr_word" title="bbox 668 545 899 604">
           <span class="alternatives">
-            <ins title="nlp 2.00">Κοσμᾶς ,</ins>
+            <ins class="alt" title="nlp 2.00">Κοσμᾶς,</ins>
+          </span>
+        </span>
+        <span id="w_31_1" class="ocr_word" title="bbox 668 545 899 604">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_32" class="ocr_word" title="bbox 939 557 997 589" lang="grc">
@@ -191,11 +196,6 @@
         <span id="w_34" class="ocr_word" title="bbox 1141 539 1379 607" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πρότερον</ins>
-          </span>
-        </span>
-        <span id="w_35" class="ocr_word" title="bbox 1405 541 1906 606" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">διεμνημονεύσαμεν,</ins>
           </span>
         </span>
       </span>
@@ -329,19 +329,19 @@
             <ins class="alt" title="nlp 1.00">ῥηθέντος</ins>
           </span>
         </span>
-        <span id="w_61" class="ocr_word" title="bbox 1254 787 1414 838" lang="grc">
+        <span id="w_61_0" class="ocr_word" title="bbox 1254 787 1414 838">
           <span class="alternatives">
-            <ins title="nlp 2.00">σηκῷ ,</ins>
+            <ins class="alt" title="nlp 2.00">σηκῷ,</ins>
+          </span>
+        </span>
+        <span id="w_61_1" class="ocr_word" title="bbox 1254 787 1414 838">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_62" class="ocr_word" title="bbox 1451 792 1537 823" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὸν</ins>
-          </span>
-        </span>
-        <span id="w_63" class="ocr_word" title="bbox 1569 769 1910 839" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀρχιερατικὸν</ins>
           </span>
         </span>
       </span>
@@ -653,19 +653,19 @@
             <ins class="alt" title="nlp 1.00">ἀπεδύσατο</ins>
           </span>
         </span>
-        <span id="w_124" class="ocr_word" title="bbox 1508 1314 1709 1381" lang="grc">
+        <span id="w_124_0" class="ocr_word" title="bbox 1508 1314 1709 1381">
           <span class="alternatives">
-            <ins title="nlp 2.00">πέδιλα ,</ins>
+            <ins class="alt" title="nlp 2.00">πέδιλα,</ins>
+          </span>
+        </span>
+        <span id="w_124_1" class="ocr_word" title="bbox 1508 1314 1709 1381">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_125" class="ocr_word" title="bbox 1756 1312 1815 1366" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰ</ins>
-          </span>
-        </span>
-        <span id="w_126" class="ocr_word" title="bbox 1851 1317 1906 1366" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
       </span>
@@ -1115,9 +1115,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 159 2169 1914 2239">
-        <span id="w_215" class="ocr_word" title="bbox 159 2185 202 2218">
+        <span id="w_215_0" class="ocr_word" title="bbox 159 2185 202 2218">
           <span class="alternatives">
-            <ins title="nlp 2.00">85</ins>
+            <ins class="alt" title="nlp 2.00">28</ins>
+          </span>
+        </span>
+        <span id="w_215_1" class="ocr_word" title="bbox 159 2185 202 2218">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_217" class="ocr_word" title="bbox 562 2174 827 2220" lang="grc">
@@ -1143,11 +1148,6 @@
         <span id="w_221" class="ocr_word" title="bbox 1512 2172 1679 2220" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">πίστιν</ins>
-          </span>
-        </span>
-        <span id="w_222" class="ocr_word" title="bbox 1705 2169 1914 2235" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ᾐτήσατο</ins>
           </span>
         </span>
       </span>
@@ -1241,9 +1241,14 @@
             <ins class="alt" title="nlp 1.00">υἱῷ</ins>
           </span>
         </span>
-        <span id="w_240" class="ocr_word" title="bbox 427 2405 822 2471" lang="grc">
+        <span id="w_240_0" class="ocr_word" title="bbox 427 2405 822 2471">
           <span class="alternatives">
-            <ins title="nlp 2.00">διατηρηθῆναι ,</ins>
+            <ins class="alt" title="nlp 2.00">διατηρηθῆναι,</ins>
+          </span>
+        </span>
+        <span id="w_240_1" class="ocr_word" title="bbox 427 2405 822 2471">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_241" class="ocr_word" title="bbox 849 2402 970 2454" lang="grc">
@@ -1264,11 +1269,6 @@
         <span id="w_244" class="ocr_word" title="bbox 1524 2424 1655 2454" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">αὐτῷ</ins>
-          </span>
-        </span>
-        <span id="w_245" class="ocr_word" title="bbox 1681 2401 1915 2454" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κἀκεῖνον</ins>
           </span>
         </span>
       </span>
@@ -1362,9 +1362,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 223 2635 1912 2707">
-        <span id="w_264" class="ocr_word" title="bbox 223 2637 489 2702" lang="grc">
+        <span id="w_264_0" class="ocr_word" title="bbox 223 2637 489 2702">
           <span class="alternatives">
-            <ins title="nlp 2.00">αἰτήσεως ,</ins>
+            <ins class="alt" title="nlp 2.00">αἰτήσεως,</ins>
+          </span>
+        </span>
+        <span id="w_264_1" class="ocr_word" title="bbox 223 2637 489 2702">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_265" class="ocr_word" title="bbox 545 2635 665 2687" lang="grc">
@@ -1385,11 +1390,6 @@
         <span id="w_268" class="ocr_word" title="bbox 1421 2639 1568 2707" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λόγον</ins>
-          </span>
-        </span>
-        <span id="w_269" class="ocr_word" title="bbox 1613 2640 1912 2703" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">βεβαιοῦντα</ins>
           </span>
         </span>
       </span>
